# market-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  README_ZH.md  docker-compose.yml  pyproject.toml
app/: constants.py  exceptions.py  main.py  utils.py
app/api/: __init__.py
app/api/dependencies/: category.py  product.py
app/api/v1/endpoints/: brand.py  category.py  index.py  product.py  store.py
app/core/: config.py  events.py  logging.py
app/db/: base.py  brand.py  category.py  database.py  product.py  store.py
app/db/queries/: brand.py  category.py  product.py  store.py  utils.py
app/db/repositories/: base.py  brand.py  category.py  product.py  store.py
app/models/: base.py  brand.py  category.py  database.py  product.py  store.py
app/routers/: index.py
