[tool.poetry]
name = "market-admin"
version = "0.1.0"
description = "market-admin is a Market background management system with fastapi"
authors = ["huangkai"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
