[tool.poetry]
name = "market-admin"
version = "0.1.0"
description = "market-admin is a Market background management system with fastapi"
authors = ["huangkai"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "0.38.1", extras = ["all"]}
python-dotenv = "0.10.2"
tortoise-orm = "0.13.5"
aiomysql = "0.0.20"
[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
verify_ssl = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

